--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,11 @@
   "dependencies": {
     "@daveyplate/better-auth-ui": "^2.1.2",
     "@neondatabase/serverless": "^1.0.1",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "axios": "^1.11.0",
     "better-auth": "^1.3.4",
     "class-variance-authority": "^0.7.1",
