--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,9 @@
   },
   "dependencies": {
     "@daveyplate/better-auth-ui": "^2.1.2",
+    "@lottiefiles/dotlottie-react": "^0.14.4",
     "@neondatabase/serverless": "^1.0.1",
+    "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
