--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "db:studio": "npx drizzle-kit studio"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.864.0",
+    "@aws-sdk/s3-request-presigner": "^3.864.0",
     "@daveyplate/better-auth-ui": "^2.1.2",
     "@lottiefiles/dotlottie-react": "^0.14.4",
     "@neondatabase/serverless": "^1.0.1",
