--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "db:studio": "npx drizzle-kit studio"
   },
   "dependencies": {
+    "@ai-sdk/google": "^2.0.8",
     "@aws-sdk/client-s3": "^3.864.0",
     "@aws-sdk/s3-request-presigner": "^3.864.0",
     "@daveyplate/better-auth-ui": "^2.1.2",
@@ -28,6 +29,7 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tabler/icons-react": "^3.34.1",
+    "ai": "^5.0.21",
     "axios": "^1.11.0",
     "better-auth": "^1.3.4",
     "class-variance-authority": "^0.7.1",
