--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,9 +29,11 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tabler/icons-react": "^3.34.1",
+    "@types/canvas-confetti": "^1.9.0",
     "ai": "^5.0.21",
     "axios": "^1.11.0",
     "better-auth": "^1.3.4",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.1",
